# comersal-integrations-for-ai

./: .gitignore  Makefile  README.md  buildspec.yml  nx.json  package.json  pyproject.toml
.kiro/steering/: architecture.md
lambdas/facturas/: Dockerfile  project.json  pyproject.toml
lambdas/facturas/src/: handler.py
lambdas/facturas/tests/: test_handler.py
lambdas/pedidos/: Dockerfile  project.json  pyproject.toml
lambdas/pedidos/src/: config.py  handler.py  numtra.py  service.py
lambdas/pedidos/tests/: test_handler.py
