[project]
name = "comersal-facturas"
version = "0.1.0"
description = "Lambda — query open invoices from NAV SQL Server"
requires-python = ">=3.13"
dependencies = [
    "pymssql>=2.2.11",
    "comersal-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
comersal-shared = { path = "../../packages/shared", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../packages/shared/src"]
